Switch to virtual threads everywhere.